# golden-axe

./: .dockerignore  .env.docker  .env.example  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.postgres  LICENSE  SYNCING.md  deploy.sh  docker-compose.yml  events.txt  ga.env  hosts.txt  readme.md  todo.txt
.github/workflows/: test.yml
be/: Cargo.toml  deploy-test.sh  deploy.sh  rollback.sh
be/src/: abi.rs  abi_param.rs  api.rs  api_sql.rs  api_sql2.rs  broadcast.rs  cursor.rs  gafe.rs  lib.rs  main.rs  query.rs  s256.rs  sql_generate.rs  sql_test.rs  sync.rs  user_query.rs
be/src/html/: status.html
be/src/sql/: indexes.sql  roles.sql  schema.sql
docker/: init-db.sh  load-schemas.sh
ex/: Cargo.toml  ex.control
ex/src/: lib.rs
fe/: Cargo.toml  deploy.sh  examples.toml  readme.md  rollback.sh
fe/src/: account.rs  api_docs.rs  api_key.rs  chains.rs  conduit_api.rs  daimo.rs  email.rs  god_mode.rs  indexsupply.rs  lib.rs  main.rs  pg.rs  postmark.rs  query.rs  schema.sql  session.rs  stripe.rs  web.rs  whitelabel.rs
fe/src/docs/: index.md
fe/src/html/: account.html  docs.html  godmode.html  index.html  login.html  new-api-key.html
fe/src/static/: account.html  docs.html  edit-api-key.html  godmode.html  history.html  index.html  login-form.js  login.html  new-api-key.html  query-history.html  show-api-key.html  status.html
fe/src/static/docs/: index-v2.md  index.md
pg/: Cargo.toml
pg/src/: lib.rs
pg_golden_axe/: Cargo.toml  deploy.sh  pg_golden_axe.control  readme.md
pg_golden_axe/src/: lib.rs
shared/: Cargo.toml
shared/src/: errors.rs  jrpc.rs  lib.rs  pg.rs
src/: abi_sql.rs  api.rs  api_sql.rs  backup.rs  gafe.rs  main.rs  pg.rs  query.html  schema.sql  sql_generate.rs  sql_test.rs  sql_validate.rs  sync.rs  user_query.rs  view.rs  webhooks.rs
src/html/: status.html
src/sql/: indexes.sql  roles.sql  schema.sql
