[package]
description = "index ethereum logs"
edition = "2021"
license = "MIT"
name = "golden-axe"
version = "0.1.0"
default-run = "ga"

[[bin]]
name = "ga"
path = "src/main.rs"

[dependencies]
alloy = { version = "0.1", features = [
    "contract",
    "dyn-abi",
    "json-abi",
    "network",
    "postgres",
    "provider-http",
    "providers",
    "rpc",
    "rpc-client",
    "rpc-types-eth",
    "serde",
    "sol-types",
] }
axum = { version = "0.7.5" }
axum-extra = { version = "0.9", features = ["form"] }
clap = { version = "4.5.7", features = ["derive", "env"] }
deadpool-postgres = "0.14"
eyre = "0.6.12"
futures = "0.3"
openssl = "0.10.64"
postgres-openssl = "0.5"
serde = "1.0.204"
serde_json = "1"
sqlformat = "0.2.4"
sqlparser = "0.47"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "fs",
] }
tokio-postgres = { version = "0.7.10", features = ["array-impls"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
tower = { version = "0.4", features = ["load-shed", "limit"] }
tower-http = { version = "0.5.0", features = [
    "cors",
    "compression-gzip",
    "compression-zstd",
    "timeout",
    "trace",
] }
itertools = "0.13.0"
reqwest = "0.12.5"
tabwriter = "1.4.0"
tokio-stream = "0.1.15"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
metrics-tracing-context = "0.16"
metrics-util = "0.17"
async-stream = "0.3.5"
humantime = "2.1.0"
serde_urlencoded = "0.7.1"
governor = "0.6.3"
nonzero = "0.2.0"
bytes = "1.9.0"
axum-test = "16.4.1"

[dev-dependencies]
postgresql_embedded = "0.12"
