[package]
description = "index supply backend"
edition = "2021"
name = "be"
version = "0.1.0"
default-run = "be"

[[bin]]
name = "be"
path = "src/main.rs"

[dependencies]
alloy = { version = "0.8.3", features = ["postgres"] }
axum = { version = "0.7.5" }
axum-extra = { version = "0.9", features = ["form", "typed-header"] }
clap = { version = "4.5.7", features = ["derive", "env"] }
deadpool-postgres = "0.14"
eyre = "0.6.12"
futures = "0.3"
openssl = "0.10.64"
shared = { path = "../shared" }
postgres-openssl = "0.5"
serde = "1.0.204"
serde_json = "1"
sqlformat = "0.2.4"
sqlparser = "0.47"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "fs",
] }
tokio-postgres = { version = "0.7.10", features = [
    "array-impls",
    "with-time-0_3",
    "with-serde_json-1",
] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
tower = { version = "0.4", features = ["load-shed", "limit"] }
tower-http = { version = "0.5.0", features = [
    "cors",
    "compression-gzip",
    "compression-zstd",
    "timeout",
    "trace",
] }
itertools = "0.13.0"
reqwest = "0.12.5"
async-stream = "0.3.5"
humantime = "2.1.0"
serde_urlencoded = "0.7.1"
governor = "0.6.3"
nonzero = "0.2.0"
bytes = "1.9.0"
serde_html_form = "0.2.7"
dashmap = "6.1.0"
time = "0.3.41"

[dev-dependencies]
shared = { path = "../shared", features = ["test"] }
axum-test = "16.4.1"
assert-json-diff = "2"
alloy = { version = "0.8.3", features = ["dyn-abi", "json-abi", "sol-types"] }
