[package]
name = "pg_golden_axe"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_golden_axe"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
be = { path = "../be" }
pgrx = "0.16.1"
serde_json = "1"

[dev-dependencies]
pgrx-tests = "0.16.1"
