[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
test = ["dep:postgresql_embedded"]

[dependencies]
axum = { version = "0.7.5" }
tokio-postgres = { version = "0.7.10" }
deadpool-postgres = "0.14"
eyre = "0.6.12"
openssl = "0.10.64"
postgresql_embedded = { version = "0.12", optional = true }
postgres-openssl = "0.5"
serde = "1.0.204"
serde_json = "1"
tracing = { version = "0.1", features = ["attributes"] }
