[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
test = [
    "dep:target-triple",
    "dep:reqwest",
    "dep:flate2",
    "dep:tar",
    "dep:rand",
    "dep:tokio",
]

[dependencies]
axum = { version = "0.7.5" }
tokio = { version = "1", features = ["fs", "process"], optional = true }
tokio-postgres = { version = "0.7.10" }
deadpool-postgres = "0.14"
eyre = "0.6.12"
openssl = "0.10.64"
postgres-openssl = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", features = ["attributes"] }
rand = { version = "0.8.5", optional = true }
tar = { version = "0.4.43", optional = true }
flate2 = { version = "1.0.35", optional = true }
reqwest = { version = "0.12.12", optional = true }
target-triple = { version = "0.1.3", optional = true }

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = [
    "color",
    "trace",
] }
